# aoc

./: .gitignore  .pylintrc  09_map.txt  Cargo.toml  README.md  debug.txt
2020/rust/: .gitignore
2020/rust/src/: day13.rs
2021/01/: 01.py  01b.py
2021/02/: 02.py  02b.py
2021/03/: 03a.py  03b.py
2021/04/: 04a.py  04b.py  short.input
2021/05/: aoc05b-diagtest.py  aoc05b.py
2021/06/: aoc06.py
2021/07/: aoc07.py
2021/08/: aoc08.py  nums.txt
2021/09/: 09.py
2021/python/01/: 01.py
2021/python/03/: 03b.py
2021/python/05/: test_05.py
2021/python/09/: 09.py
2021/rust/src/: day_10.rs  main.rs  template.rs  utils.rs
2022/: template.py
2022/01/: 01.py
2022/02/: 02-dict.py  02.py
2022/04/: 04.py
2022/05/: 05.py
2022/06/: 06.py
2022/07/: 07.py
2022/08/: 08.py  08_combo.py  08_combo_timing.py
2022/09/: 09.py  09_xy.py
2022/10/: 10.py
2022/11/: 11.py
2022/12/: 12.py  12v2.py  task12v3.py  task12v3b.py
2023/c/src/: main.c
2023/rust/: .gitignore  Cargo.toml
2023/rust/src/: day01.rs  day01b.rs  day02.rs  day02b.rs  day03.rs  day03b.rs  day03var.rs  day04.rs  day04b.rs  day04opt.rs  day04opt2.rs  day05.rs  day05b.rs  day06.rs  day06opt.rs  day07.rs  day07b.rs  day07opt.rs  day08.rs  day09.rs  day10.rs  day_02.rs  day_05.rs  day_08.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  main.rs  template.rs  utils.rs
2023/src/: utils.h
2024/: Cargo.toml
2024/src/: day_01.rs  day_01b.rs  day_02.rs  day_03.rs  day_04.rs  day_04b.rs  day_05.rs  day_06.rs  day_07.rs  day_08 copy.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  lib.rs  main.rs  template.rs  utils.rs
doc/: protips.txt
sort/: lib.rs
src/: lib.rs  main.rs  template.rs
src/util/: direction.rs  dsu.rs  grid.rs  gridmap.rs  point.rs  point2.rs  point3.rs  point3d.rs  regex.rs  utils.rs
src/y2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs
src/y2020/: day13.rs  main.rs
src/y2021/python/: 02b.py  04b.py  aoc05a.py  aoc06.py  test.py
src/y2021/rust/: Cargo.toml  day_10.rs
src/y2022/: 02-dict.py  02.py  03.py  05.py  06.py  08.py  08_combo.py  08_combo_timing.py  08_nditer.py  09.py  09_combo.py  11.py  11b.py  12.py  13.py  numpy_test.py  task12v3.py  task12v3b2.py
src/y2023/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.bad  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs
src/y2023/c/src/: utils.c
src/y2023/c/src/01/: task1.c
src/y2023/rust/: day03.rs  day04.rs  day04b.rs  day04opt.rs  day06.rs  day06opt.rs  day07.rs  day07b.rs  day_01.rs  day_10.rs  day_13.rs  day_16.rs  day_17.crap  day_18.rs  day_20.rs  main.rs
src/y2024/: day_01.rs  day_01b.rs  day_02.rs  day_03.rs  day_04.rs  day_04b.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12 copy.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs
src/y2025/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs
test/output/2023/: flood_filled.txt  flood_filled_inside.txt  gold_map.txt  gold_map_enhance.txt  gold_map_enhance_more.txt  gold_map_enhance_more2.txt
test/output/2024/: 14_christmas_tree.txt
