[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
petgraph = "0.6.5"
regex = "1.11.1"

[[bin]]
name = "main"
path = "src/main.rs"

