[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
grid = "0.15.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
petgraph = "0.6.5"
rayon = "1.10.0"
regex = "1.11.1"

[profile.release]
codegen-units = 1
1lto = "fat"
panic = "abort"

[[bin]]
name = "main"
path = "src/main.rs"

