[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-tree = "0.2.0"
lazy_static = "1.4.0"
regex = "1"
num = "0.4.1"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day01b"
path = "src/day01b.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day02b"
path = "src/day02b.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day03b"
path = "src/day03b.rs"

[[bin]]
name = "day03var"
path = "src/day03var.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day04b"
path = "src/day04b.rs"

[[bin]]
name = "day04opt"
path = "src/day04opt.rs"

[[bin]]
name = "day04opt2"
path = "src/day04opt2.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day05b"
path = "src/day05b.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day06opt"
path = "src/day06opt.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day07b"
path = "src/day07b.rs"

[[bin]]
name = "day07opt"
path = "src/day07opt.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"


